--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,4 +10,6 @@ server.port=8083
 eureka.client.service-url.defaultZone=http://localhost:8099/eureka
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.root=debug
+logging.level.com.example=TRACE
 
